# hinglish-voice-collection-agent

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Assinment.md  DECISION_JOURNAL.md  LICENSE  Makefile  README.md  agent.py  agent_web.py  pyproject.toml
demo/: README.md
docker/: .dockerignore  Dockerfile  docker-compose.yml
eval/: baseline_pipeline.py  corpus.py  metrics.py  report.md  run_eval.py  synth_corpus.py
eval/results/: baseline.jsonl  ours.jsonl
eval/test_corpus/: README.md  manifest.jsonl
nlp/: filler.py  language_router.py  number_normalizer.py  state.py  system_prompt.py  turn_processor.py
remote_stt/: README.md  requirements.txt  server.py  start.sh
report/: report.tex
stt/: whisper_stt.py
tts/: cartesia_fallback.py  sarvam_tts.py
